--- a/backend/env.example
+++ b/backend/env.example
@@ -28,20 +28,23 @@ JWT_SECRET=your_super_secret_jwt_key_at_least_32_characters_long
 JWT_EXPIRES_IN=30d
 
 # ==============================================
-# SMS API НАСТРОЙКИ
+# SMS API НАСТРОЙКИ (Nikita.kg)
 # ==============================================
 
-# API ключ для SMS провайдера (например, Nikita.kg, SMS.kg)
-SMS_API_KEY=your_sms_api_key_here
+# Логин партнера в системе Nikita.kg
+SMS_LOGIN=your_nikita_login
 
-# Имя отправителя SMS
+# Пароль партнера в системе Nikita.kg
+SMS_PASSWORD=your_nikita_password
+
+# Имя отправителя SMS (до 11 латинских символов или 14 цифр)
 SMS_SENDER=TezKyzmat
 
-# URL API для отправки SMS
-SMS_API_URL=https://api.nikita.kg/sms/send
+# URL API для отправки SMS (по умолчанию Nikita.kg)
+SMS_API_URL=https://smspro.nikita.kg/api/message
 
 # Альтернативные SMS провайдеры для Кыргызстана:
-# SMS.kg: https://sms.kg/api/send
+# SMS.kg: https://sms.kg/api/send (требует другой формат запроса)
 # Alfa Telecom: https://alfa.kg/api/sms
 # Beeline SMS API: https://api.beeline.kg/sms
 
@@ -112,16 +115,32 @@ TYPEORM_SYNCHRONIZE=true
 # NODE_ENV=development
 # DB_HOST=localhost
 # TYPEORM_SYNCHRONIZE=true
-# JWT_SECRET=development_secret_key (НЕ ИСПОЛЬЗУЙТЕ В ПРОДАКШНЕ!)
+# SMS_LOGIN=test_login (в dev режиме SMS не отправляются реально)
+# SMS_PASSWORD=test_password
 
 # ТЕСТИРОВАНИЕ (testing):
 # NODE_ENV=testing
 # DB_NAME=tez_kyzmat_test
-# SMS_API_KEY=test_key
+# SMS_LOGIN=test_login
 
 # ПРОДАКШН (production):
 # NODE_ENV=production
 # DB_HOST=your_production_db_host
 # TYPEORM_SYNCHRONIZE=false
 # JWT_SECRET=your_very_secure_production_secret_key_here
-# SMS_API_KEY=your_real_sms_api_key 
+# SMS_LOGIN=your_real_nikita_login
+# SMS_PASSWORD=your_real_nikita_password
+
+# ==============================================
+# ИНСТРУКЦИИ ПО НАСТРОЙКЕ SMS
+# ==============================================
+
+# 1. Зарегистрируйтесь на https://nikita.kg/
+# 2. Получите логин и пароль для SMS API
+# 3. Укажите их в переменных SMS_LOGIN и SMS_PASSWORD
+# 4. Настройте имя отправителя SMS_SENDER (должно быть одобрено)
+# 5. В режиме разработки SMS коды выводятся в консоль
+# 6. В продакшне SMS отправляются реально через API
+
+# Формат номеров телефонов: +996XXXXXXXXX или 996XXXXXXXXX
+# Поддерживаемые операторы: Beeline, Megacom, O!, Nurtel 
